--- a/src/css/base/_typography.post.css
+++ b/src/css/base/_typography.post.css
@@ -68,7 +68,8 @@ p {
     }
 }
 
-[class*="__box-content"] {
+[class*="__box-content"],
+[class*="__box-list"] {
     font-size: 1.125rem;
     line-height: 2;
     letter-spacing: 0.025rem;
